--- a/_posts/2016-12-13-mlreview.md
+++ b/_posts/2016-12-13-mlreview.md
@@ -5,7 +5,9 @@ tags:
   - 机器学习复习
 ---
 
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
+<script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 
 # 写在开始
 
